workspace = { members = [ "algorithm", "macro_define_crate","rust-base"] }
[package]
name = "rust-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.35.1", features = [] }
macro_define_crate = {path = "./macro_define_crate"}